<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registratrion">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Register Now!"
        android:textColor="@color/black"
        android:textSize="96px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We are here for you 24/7"
        android:textColor="@color/black"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/firstNameTextEdit"
        android:layout_width="910px"
        android:layout_height="200px"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_user"
        android:fontFamily="sans-serif-light"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/surnameTextEdit"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/login_user"
        android:fontFamily="sans-serif-light"
        android:hint="Surname"
        android:inputType="textPersonName"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextEdit" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/bg_text_email"
        android:fontFamily="sans-serif-light"
        android:hint="Enter Your Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameTextEdit" />

    <EditText
        android:id="@+id/passEdit"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/bg_text_pass"
        android:fontFamily="sans-serif-light"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/bg_text_dob"
        android:fontFamily="sans-serif-light"
        android:hint="Date of Birth"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEdit" />

    <Spinner
        android:id="@+id/accTypeSpinner"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/login_user"
        android:ems="10"
        android:entries="@array/types"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="54dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="300px"
        android:layout_height="130px"
        android:layout_marginTop="8dp"
        android:background="@drawable/reg_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accTypeSpinner" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="337dp"
        android:layout_height="29dp"
        android:text="ALREADY A MEMBER? LOGIN"
        android:textColor="#534DFF"
        android:textSize="50px"
        android:onClick="onClickTo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>