<resources>
    <string name="app_name">E-hospital</string>
    <string name="no_registered">ARE YOU NOT A MEMBER?</string>
    <string name="register">REGISTER</string>
    <string name="no_login">ALREADY A MEMBER?</string>
    <string name="login">LOGIN</string>
    <string name="toast">Email already exist, Please sign in </string>
    <string name="inValidDetails">Please enter valid details</string>
    <string name="patientPage">Patient Page</string>
    <string name="unVerifiedEmail">Please verify your email</string>
    <string name="doctorProfile">Doctor Profile</string>


    <string name="wel">WELCOME!</string>
    <string name="ehosp">E-HOSPITAL MANAGEMENT SYSTEM</string>

    <string-array name="types">
        <item>Select Account Type</item>
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>

    <string-array name="cardTypes">
        <item>Please an option signing up</item>
        <item>Medical card</item>
        <item>Bank card</item>
    </string-array>

    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="nav_draw_open">Open Navigation drawer</string>
    <string name="nav_draw_close">Close Navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Covid-19</string>

    <string name="title_activity_mobile_navigation">MobileNavigation</string>



</resources>
