<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/covid19_nav"
            android:icon="@drawable/virus"
            android:title="Covid-19 Tracker"/>
        <item android:id="@+id/profile_nav"
            android:icon="@drawable/ic_profile"
            android:title="Profile"/>
        <item android:id="@+id/logout_nav"
            android:icon="@drawable/ic_logout"
            android:title="Logout"/>
    </group>

        <item android:title="Communication">
            <menu>
                <item android:id="@+id/nav_share"
                    android:title="Share"/>
                <item android:id="@+id/nav_send"
                    android:title="Send"/>
            </menu>
        </item>




</menu>