<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="E - Hospital"
        android:textColor="@color/black"
        android:textSize="96px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Health-Care"
        android:textColor="@color/black"
        android:textSize="96px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We are here for you 24/7"
        android:textColor="@color/black"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="413dp"
        android:layout_height="288dp"
        android:background="@drawable/ic_group_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/emlEditText"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/login_user"
        android:fontFamily="sans-serif-light"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        android:textSize="50px"
        android:paddingLeft="54dp"
        android:hint="Email Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <EditText
        android:id="@+id/passTextEdit"
        android:layout_width="910px"
        android:layout_height="200px"
        android:background="@drawable/bg_text_pass"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="50px"
        android:paddingLeft="54dp"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emlEditText" />

    <TextView
        android:id="@+id/forgetPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot your password?"
        android:textColor="@color/red"
        android:textSize="42px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTextEdit" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300px"
        android:layout_height="130px"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPasswordText" />

    <TextView
        android:id="@+id/regTextView"
        android:layout_width="337dp"
        android:layout_height="29dp"
        android:onClick="onClick"
        android:text="NOT A MEMBER? REGISTER NOW"
        android:textColor="#534DFF"
        android:textSize="50px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.968" />


</androidx.constraintlayout.widget.ConstraintLayout>